[project]
name = "sshmanager"
version = "0.1.0"
description = "Is a simple SSH manager in your terminal."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.16.0",
]
authors = [
    { name = "Artur", email = "arturboyun@gmail.com" }
]

[project.scripts]
sshm = "ssh_manager.main:cli"
scon = "ssh_manager.main:con"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]
